@@ -1,3 +1,7 @@
+2005-03-14  Lluis Sanchez Gual <lluis@novell.com>
+
+	* MonoQuery.addin.xml.in: Define the MonoQuery pad.
+
 2005-03-06	Christian Hergert	<chris@mosaix.net>
 
 	* MonoQuery/Makefile.am: EXTRA_DIST doesnt support conditional variables.
